@@ -1,3 +1,8 @@
+2012-11-05 Riccardo Mottola <rm@gnu.org>
+
+	* DBCVSReader.m
+	Handle initial empty fields and set them to ""
+
 2012-11-04 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
